--- a/index.html
+++ b/index.html
@@ -13,6 +13,112 @@
 </head>
 <body>
     
+    <!-- Beggins navbar -->
+    <header>
+        <nav class="navbar navbar-light fixed-top ps-lg-5 pe-lg-5 ">
+            <div class="container-fluid">
+                <!-- Left section -->
+                <div class="container-1 d-flex justify-content-center align-items-center">
+                    <button class="navbar-toggler me-1 d-lg-none" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <a class="navbar-brand" href="#"><img src="https://dev-to-uploads.s3.amazonaws.com/uploads/logos/resized_logo_UQww2soKuUsjaOGNB38o.png" alt="" width="50" height="40"></a>
+                    <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+                        <div class="offcanvas-header d-flex flex-column">    
+                            <div class="d-flex w-100 justify-content-between align-items-center ">
+                                <h2 class="offcanvas-title" id="offcanvasNavbarLabel">DEV Community</h2>
+                                <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                            </div>
+                            <div class="collapse__info pt-1 px-3 mt-3 d-flex flex-column justify-content-center align-items-center">
+                                <h2 class="pt-3"><span class="collapse__h2">DEV Community</span> is a community of 852,499 amazing developers</h2>
+                                <p class="nav__info">We´re a place where coders share, stay up-to-date and grow they careers</p>
+                                <button class="btn container__btn">Create account</button>
+                                <a href="#" class="container__log">Log in</a>
+                            </div>
+                        </div>
+                        <div class="offcanvas-body">
+                            <ul class="navbar-nav mt-3">
+                                <li class="nav-item p-2 ">
+                                    <i class=""><img src="/images/home-icon.svg" alt=""></i>
+                                    <a class="nav-link active d-inline" aria-current="page" href="#">Home</a>
+                                </li>
+                                <li class="nav-item p-2">
+                                    <i class=""><img src="/images/podcast-icon.svg" alt=""></i>
+                                    <a class="nav-link active d-inline" aria-current="page" href="#">Podcasts</a>
+                                </li>
+                                <li class="nav-item p-2">
+                                    <i class=""><img src="/images/cam-icon.svg" alt=""></i>
+                                    <a class="nav-link active d-inline" aria-current="page" href="#">Videos</a>
+                                </li>
+                                <li class="nav-item p-2">
+                                    <i class=""><img src="/images/tags-icon.svg" alt=""></i>
+                                    <a class="nav-link active d-inline" aria-current="page" href="#">Tags</a>
+                                </li>
+                                <li class="nav-item p-2">
+                                    <i class=""><img src="/images/faq-icon.svg" alt=""></i>
+                                    <a class="nav-link active d-inline" aria-current="page" href="#">Faqs</a>
+                                </li>
+                                <li class="nav-item p-2 ">
+                                    <i class=""><img src="/images/shop-icon.svg" alt=""></i>
+                                    <a class="nav-link active d-inline" aria-current="page" href="#">Forem Shop</a>
+                                </li>
+                                <li class="nav-item p-2">
+                                    <i class=""><img src="/images/sponsors-icon.svg" alt=""></i>
+                                    <a class="nav-link active d-inline" aria-current="page" href="#">Sponsors</a>
+                                </li>
+                                <li class="nav-item p-2">
+                                    <i class=""><img src="/images/about-icon.svg" alt=""></i>
+                                    <a class="nav-link active d-inline" aria-current="page" href="#">About</a>
+                                </li>
+                                <li class="nav-item p-2">
+                                    <i class=""><img src="/images/contact-icon.svg" alt=""></i>
+                                    <a class="nav-link active d-inline" aria-current="page" href="#">Contact</a>
+                                </li>
+                            </ul>
+                            <h3 class="mt-3">Other</h3>
+                            <ul class="navbar-nav ">    
+                                <li class="nav-item p-2">
+                                    <i class=""><img src="/images/conduct-icon.svg" alt=""></i>
+                                    <a class="nav-link active d-inline" aria-current="page" href="#">Code of Conduct</a>
+                                </li>
+                                <li class="nav-item p-2">
+                                    <i class=""><img src="/images/privacy-icon.svg" alt=""></i>
+                                    <a class="nav-link active d-inline" aria-current="page" href="#">Privacy Policy</a>
+                                </li>
+                                <li class="nav-item p-2">
+                                    <i class=""><img src="/images/terms-icon.svg" alt=""></i>
+                                    <a class="nav-link active d-inline" aria-current="page" href="#">Terms of use</a>
+                                </li>
+                            </ul>
+                            <div class="nav__social mt-3 d-flex justify-content-center ">
+                                <i class="fa-brands fa-twitter nav__social-logo ps-4 pe-4"></i>
+                                <i class="fa-brands fa-facebook-square nav__social-logo ps-4 pe-4"></i>
+                                <i class="fa-brands fa-github nav__social-logo ps-4 pe-4"></i>
+                                <i class="fa-brands fa-instagram-square nav__social-logo ps-4 pe-4"></i>
+                                <i class="fa-brands fa-twitch nav__social-logo ps-4 pe-4 "></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="nav__search d-flex justify-content-center align-items-center">
+                        <input class="form-control nav__search-inp d-none d-lg-block" type="search" placeholder="Search..." aria-label="Search">
+                        <a class="nav__search-mag d-none d-lg-flex justify-content-center align-items-center ps-3 pe-3" href="#"><i><img src="/images/magnifying-icon.svg" alt=""></i></a>
+                    </div>
+                </div>
+                <!-- End-->
+
+                <!-- Second Section -->
+                <div class="container-2 d-flex">
+                    <div class="d-flex w-100 align-items-center justify-content-center ">
+                        <a href="#" class="container__log d-none d-lg-block  cont-link m-3">Log in</a>
+                        <a class="d-lg-none me-2 " href="#"><i><img src="/images/magnifying-icon.svg" alt=""></i></a>
+                        <button class="btn container__btn ">Create account</button>
+                    </div>
+                </div>
+            </div>
+        </nav>
+      </header>
+      <!-- End Navbar -->
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     
