Se crea la estructura de los asides

--- a/index.html
+++ b/index.html
@@ -119,6 +119,119 @@
       </header>
       <!-- End Navbar -->
 
+     <!-- Left aside Begins -->
+      <main class="container">
+        <section class="row">
+            <div class=" col-lg-3 col-sm-0 aside d-none d-lg-block ">
+                <div class="aside__info pt-1 px-3">
+                    <h2 class= "pt-3"><a class="aside__h2">DEV Community</a> is a community of 852,499 amazing developers</h2>
+                    <p class="aside__info-p">We´re a place where koders share, stay up-to-date and grow they careers</p>
+                    <button class="btn aside__btn">Create account</button>
+                    <a href="#" class="aside__log">Log in</a>
+                </div>
+                <ul class="aside__list mt-3">
+                    <li class="aside__item p-2 ">
+                        <i class=""><img src="/images/home-icon.svg" alt=""></i>
+                        <a class="aside__link active d-inline" aria-current="page" href="#">Home</a>
+                    </li>
+                    <li class="aside__item p-2">
+                        <i class=""><img src="/images/podcast-icon.svg" alt=""></i>
+                        <a class="aside__link active d-inline" aria-current="page" href="#">Podcasts</a>
+                    </li>
+                    <li class="aside__item p-2">
+                        <i class=""><img src="/images/cam-icon.svg" alt=""></i>
+                        <a class="aside__link active d-inline" aria-current="page" href="#">Videos</a>
+                    </li>
+                    <li class="aside__item p-2">
+                        <i class=""><img src="/images/tags-icon.svg" alt=""></i>
+                        <a class="aside__link active d-inline" aria-current="page" href="#">Tags</a>
+                    </li>
+                    <li class="aside__item p-2">
+                        <i class=""><img src="/images/faq-icon.svg" alt=""></i>
+                        <a class="aside__link active d-inline" aria-current="page" href="#">Faqs</a>
+                    </li>
+                    <li class="aside__item p-2">
+                        <i class=""><img src="/images/shop-icon.svg" alt=""></i>
+                        <a class="aside__link active d-inline" aria-current="page" href="#">Forem Shop</a>
+                    </li>
+                    <li class="aside__item p-2">
+                        <i class=""><img src="/images/sponsors-icon.svg" alt=""></i>
+                        <a class="aside__link active d-inline" aria-current="page" href="#">Sponsors</a>
+                    </li>
+                    <li class="aside__item p-2">
+                        <i class=""><img src="/images/about-icon.svg" alt=""></i>
+                        <a class="aside__link active d-inline" aria-current="page" href="#">About</a>
+                    </li>
+                    <li class="aside__item p-2">
+                        <i class=""><img src="/images/contact-icon.svg" alt=""></i>
+                        <a class="aside__link active d-inline" aria-current="page" href="#">Contact</a>
+                    </li>
+                </ul>
+                <h3 class="aside__subclass mt-3">Other</h3>
+                <ul class="aside__list ">    
+                    <li class="aside__item p-2">
+                        <i class=""><img src="/images/conduct-icon.svg" alt=""></i>
+                        <a class="aside__link active d-inline" aria-current="page" href="#">Code of Conduct</a>
+                    </li>
+                    <li class="aside__item p-2">
+                        <i class=""><img src="/images/privacy-icon.svg" alt=""></i>
+                        <a class="aside__link active d-inline" aria-current="page" href="#">Privacy Policy</a>
+                    </li>
+                    <li class="aside__item p-2">
+                        <i class=""><img src="/images/terms-icon.svg" alt=""></i>
+                        <a class="aside__link active d-inline" aria-current="page" href="#">Terms of use</a>
+                    </li>
+                </ul>
+                <div class="aside__social mt-3 d-flex justify-content-center ">
+                    <i class="fa-brands fa-twitter aside__social-cont ps-4 pe-4"></i>
+                    <i class="fa-brands fa-facebook-square aside__social-cont ps-4 pe-4"></i>
+                    <i class="fa-brands fa-github aside__social-cont ps-4 pe-4"></i>
+                    <i class="fa-brands fa-instagram-square aside__social-cont ps-4 pe-4"></i>
+                    <i class="fa-brands fa-twitch aside__social-cont ps-4 pe-4"></i>
+                </div>
+                <div class="aside__hashtag mt-3">
+                    <h3 class="aside__hashtag-title">Popular Tags</h3>
+                    <a class="aside__link-hs active d-block px-2 py-2" aria-current="page" href="#">#javascript</a>
+                    <a class="aside__link-hs active d-block px-2 py-2" aria-current="page" href="#">#webdev</a>
+                    <a class="aside__link-hs active d-block px-2 py-2" aria-current="page" href="#">#begginers</a>
+                    <a class="aside__link-hs active d-block px-2 py-2" aria-current="page" href="#">#programming</a>
+                    <a class="aside__link-hs active d-block px-2 py-2" aria-current="page" href="#">#react</a>
+                    <a class="aside__link-hs active d-block px-2 py-2" aria-current="page" href="#">#python</a>
+                    <a class="aside__link-hs active d-block px-2 py-2" aria-current="page" href="#">#productivity</a>
+                    <a class="aside__link-hs active d-block px-2 py-2" aria-current="page" href="#">#discuss</a>
+                </div>
+            </div>
+            <!-- Left aside ends -->
+
+            <!-- Main content starts -->
+            <!-- Main content ends -->
+
+            <!-- Aside right -->
+            <div class=" col-lg-3 col-sm-0 aside-2 d-none d-lg-block ">
+                <div class="card mt-3" style="width: 18rem;">
+                    <img src="/images/forem.jpeg" class="card-img-top card__img px-3 pt-4 pb-3" alt="...">
+                    <div class="card-body">
+                        <a class="card-text card__text"><h2>Forem Android App is Here</h2></a>
+                    </div>
+                </div>
+                <div class="card mt-3" style="width: 18rem;">
+                    <img src="/images/appwrite.webp" class="card-img-top card__img" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Appwrite Hackathon (44)</h5>
+                        <a class="card__link active d-block p-3 w-100" aria-current="page" href="#">TMStats: Trackmania Tracker</a>
+                        <a class="card__link active d-block p-3 w-100" aria-current="page" href="#">Made With Appwrite - Final Post - Appwrite Hackaton</a>
+                        <a class="card__link active d-block p-3 w-100" aria-current="page" href="#">Building Nigma, a simple puzzle App Game using AppWrite</a>
+                        <a class="card__link active d-block p-3 w-100" aria-current="page" href="#">Day 0: Brainstorming</a>
+                        <a class="card__link active d-block p-3 w-100" aria-current="page" href="#">Import Csv to Appwrite Database</a>
+                        <button class="btn card__btn mb-2">Submit Your Project!</button>
+                        <button class="btn card__btn2">See all posts</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Right aside ends -->
+    </main>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     
