--- a/index.html
+++ b/index.html
@@ -232,6 +232,15 @@
         <!-- Right aside ends -->
     </main>
 
+    <!-- Footer beggins-->    
+        <footer class="footer d-flex flex-column justify-content-center align-items-center py-5">
+        <span class="footer__first"><a class="footer__word">DEV Community </a>-- A constructive ans inclusive social network for software Developers. With you every step of your journey.</span>
+        <span class="footer__second">Built on <a class="footer__word">Forem</a> -- the <a class="footer__word">open source</a> software that powers <a class="footer__word">DEV</a> and other inclusive communities.</span>
+        <span>Made with love and <a class="footer__word">Ruby on Rails.</a class="footer__word">DEV Community © 2016-2022</span>
+        <i class="fa-solid fa-seedling footer__icon"></i>
+    </footer>
+    <!-- Footer ends -->
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     
