--- a/index.html
+++ b/index.html
@@ -203,8 +203,153 @@
             </div>
             <!-- Left aside ends -->
 
-            <!-- Main content starts -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+            <!-- Center content starts -->
+            <div class=" col-lg-6 col-sm-12 centro d-lg-block ">
+
+
+
+                <div class="card cardC mb-2 col-lg-6">
+                    <div class="row">
+                        <img src="images/img2.png" alt="" />
+                    </div>
+                    <div class="row">
+                        <div class="col-1 p-4">
+                        <img class="pph" src="images/img1.jfif" alt="" />
+                    </div>
+                    <div class="col-11 p-4">
+                        <div class="row">
+                            <p class="col-11 title__nameC">Ben Halpern</p>
+                            <p class="col-11 title__timeC">May 4</p>
+                        </div>
+                        <div class="row">
+                            <a class="title_articleC aC" href="post.html">
+                            What tools would you choose to create a personal portfolio site if
+                            starting from scratch?
+                            </a>
+                        </div>
+                        <div class="row">
+                            <div class="col">
+                                <button class="btn__discussC">#discuss</button>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col">
+                            <button class="btn__actionsC">
+                                <img class="img__iconsC" src="images/svgexport-30.svg" alt="" />
+                                6 reactions
+                            </button>
+                            <button class="btn__actionsC">
+                                <img class="img__iconsC" src="images/svgexport-29.svg" alt="" />
+                                8 comments
+                            </button>
+                        </div>
+                        <div class="col d-flex justify-content-end">
+                            <p class="time__readC">2 min read</p>
+                            <button class="btn__saveC">Save</button>
+                        </div>
+                        </div>
+                    </div>
+                    </div>
+                </div>
+              
+                <div class="card cardC mb-2">
+                    <div class="row">
+                        <div class="col-1 p-4">
+                            <img class="pph" src="images/img3.jpg" alt="" />
+                        </div>
+                    <div class="col-11 p-4">
+                        <div class="row">
+                            <p class="col-11 title__nameC">Nirazan Basnet</p>
+                            <p class="col-11 title__timeC">May 4</p>
+                        </div>
+                        <div class="row">
+                            <a class="title_articleC aC" href="">
+                            Don't use 100vh for mobile responsive
+                            </a>
+                        </div>
+                        <div class="row">
+                            <div class="col">
+                                <button class="btn__javascriptC buttonC">#javascript</button>
+                                <button class="btn__cssC buttonC">#css</button>
+                                <button class="btn__htmlC buttonC">#html</button>
+                                <button class="btn__webdevC buttonC">#webdev</button>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col">
+                                <button class="btn__actionsC buttonC">
+                                <img class="img__iconsC" src="images/svgexport-30.svg" alt="" />
+                                    6 reactions
+                                </button>
+                                <button class="btn__actionsC buttonC">
+                                <img class="img__iconsC" src="images/svgexport-29.svg" alt="" />
+                                8 comments
+                                </button>
+                            </div>
+                            <div class="col d-flex justify-content-end">
+                                <p class="time__readC">2 min read</p>
+                            <button class="btn__saveC">Save</button>
+                        </div>
+                        </div>
+                    </div>
+                    </div>
+                </div>
+
+
+
+            </div>
             <!-- Main content ends -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
             <!-- Aside right -->
             <div class=" col-lg-3 col-sm-0 aside-2 d-none d-lg-block ">
@@ -233,7 +378,7 @@
     </main>
 
     <!-- Footer beggins-->    
-        <footer class="footer d-flex flex-column justify-content-center align-items-center py-5">
+    <footer class="footer d-flex col-12 flex-column justify-content-center align-items-center py-5">
         <span class="footer__first"><a class="footer__word">DEV Community </a>-- A constructive ans inclusive social network for software Developers. With you every step of your journey.</span>
         <span class="footer__second">Built on <a class="footer__word">Forem</a> -- the <a class="footer__word">open source</a> software that powers <a class="footer__word">DEV</a> and other inclusive communities.</span>
         <span>Made with love and <a class="footer__word">Ruby on Rails.</a class="footer__word">DEV Community © 2016-2022</span>
