--- a/index.html
+++ b/index.html
@@ -252,8 +252,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row">
-                        <a class="title_articleC aC mx-5" href="post.html">
+                    <div class="row px-5">
+                        <a class="title_articleC aC " href="post.html">
                         What tools would you choose to create a personal portfolio site if
                         starting from scratch?
                         </a>
